[gd_scene load_steps=13 format=2]

[ext_resource path="res://menu/vignette.png" type="Texture" id=1]
[ext_resource path="res://global/scene_change/scene_change_transition.tscn" type="PackedScene" id=2]
[ext_resource path="res://menu/ParticleControl.tscn" type="PackedScene" id=3]
[ext_resource path="res://menu/ModuleTreeView.tscn" type="PackedScene" id=4]
[ext_resource path="res://menu/module_menu.gd" type="Script" id=5]
[ext_resource path="res://fonts/Montserrat-Italic.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://fonts/Montserrat-Regular.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://menu/menu_theme.tres" type="Theme" id=8]

[sub_resource type="Shader" id=6]
code = "// From https://godotshaders.com/shader/color-vignetting/

shader_type canvas_item;

uniform float vignette_intensity = 0.4;
uniform float vignette_opacity : hint_range(0.0, 1.0) = 0.5;
uniform vec4 vignette_rgb : hint_color = vec4(0.0, 0.0, 0.0, 1.0);

float vignette(vec2 uv){
	uv *= 1.0 - uv.xy;
	float vignette = uv.x * uv.y * 15.0;
	return pow(vignette, vignette_intensity * vignette_opacity);
}

void fragment(){
	vec4 color = texture(SCREEN_TEXTURE, SCREEN_UV);
	vec4 text = texture(TEXTURE, UV);
	
	text.rgba *= (vignette_rgb.rgba);
	text.rgba *= (1.0 - vignette(UV));
	
	COLOR = vec4((text.rgb)*color.rgb,text.a);
}"

[sub_resource type="ShaderMaterial" id=7]
shader = SubResource( 6 )
shader_param/vignette_intensity = 0.3
shader_param/vignette_opacity = 0.4
shader_param/vignette_rgb = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=10]
size = 32
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=8]
size = 32
font_data = ExtResource( 7 )

[node name="ModuleSelection" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -434, 84 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SceneChangeTransition" parent="." instance=ExtResource( 2 )]

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1280, 720 )
mouse_filter = 2
color = Color( 0.133333, 0.141176, 0.196078, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParticleControl" parent="." instance=ExtResource( 3 )]

[node name="Vignette" type="TextureRect" parent="."]
material = SubResource( 7 )
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
theme = ExtResource( 8 )
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_right = 1880.0
margin_bottom = 50.0

[node name="Label" type="Label" parent="VBoxContainer/CenterContainer"]
margin_left = 646.0
margin_right = 1234.0
margin_bottom = 50.0
text = "Select a module to explore..."

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 70.0
margin_right = 1880.0
margin_bottom = 970.0
custom_constants/separation = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectionBox" type="ColorRect" parent="VBoxContainer/HBoxContainer"]
margin_right = 920.0
margin_bottom = 900.0
rect_min_size = Vector2( 920, 900 )
color = Color( 0.0235294, 0.0235294, 0.0235294, 0.6 )

[node name="ModuleTreeView" parent="VBoxContainer/HBoxContainer/SelectionBox" instance=ExtResource( 4 )]

[node name="DescriptionBox" type="ColorRect" parent="VBoxContainer/HBoxContainer"]
margin_left = 960.0
margin_right = 1880.0
margin_bottom = 900.0
rect_min_size = Vector2( 920, 900 )
color = Color( 0.0235294, 0.0235294, 0.0235294, 0.6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DescriptionLabel" type="RichTextLabel" parent="VBoxContainer/HBoxContainer/DescriptionBox"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
rect_min_size = Vector2( 880, 800 )
theme = ExtResource( 8 )
custom_fonts/italics_font = SubResource( 10 )
custom_fonts/normal_font = SubResource( 8 )
bbcode_enabled = true
bbcode_text = "Welcome to Graph Theory [color=yellow][wave amp=50 freq=2]Visualized![/wave][/color]

We have a list of various graph theory concepts to explore. Select a module on the left to get started!"
text = "Welcome to Graph Theory Visualized!

We have a list of various graph theory concepts to explore. Select a module on the left to get started!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.01
anchor_top = 0.99
anchor_right = 1.0
anchor_bottom = 0.99
margin_top = -70.0
custom_constants/separation = 1200
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="HBoxContainer"]
margin_right = 415.0
margin_bottom = 70.0
rect_min_size = Vector2( 200, 70 )
theme = ExtResource( 8 )
text = "Back to Main Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="HBoxContainer"]
visible = false
margin_left = 1615.0
margin_right = 1884.0
margin_bottom = 70.0
rect_min_size = Vector2( 200, 70 )
theme = ExtResource( 8 )
text = "Play Module"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="signal_selected_chapter" from="VBoxContainer/HBoxContainer/SelectionBox/ModuleTreeView" to="." method="_on_ModuleTreeView_signal_selected_chapter"]
[connection signal="signal_selected_module" from="VBoxContainer/HBoxContainer/SelectionBox/ModuleTreeView" to="." method="_on_ModuleTreeView_signal_selected_module"]
[connection signal="signal_update_tree_item_desc" from="VBoxContainer/HBoxContainer/SelectionBox/ModuleTreeView" to="." method="_on_ModuleTreeView_signal_update_tree_item_desc"]
[connection signal="pressed" from="HBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="HBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
